--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>JS Text Manipulator 1.4.6</title>
+<title>JS Text Manipulator 1.4.7</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.4.4/math.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/voca/1.4.0/voca.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fast-xml-parser/3.19.0/parser.min.js"></script>
@@ -10,14 +10,15 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-JS Text Manipulator 1.4.6
+JS Text Manipulator 1.4.7
 <hr>
 <textarea id="original" rows="20" cols="70" placeholder="Enter original text here ..."></textarea>
 <textarea id="manipulated" rows="20" cols="70" placeholder="Manipulated text will appear here ..."></textarea>
 <textarea id="methods" rows="20" cols="50" readonly>{ "methods" : [] }</textarea>
 <br>
-<input type="checkbox" id="unwrap" onchange="unwrapText(this)"><label>Unwrap text</label>
-<input type="checkbox" id="addOnInput" onchange="addOnInputEvent(this)"><label>Manipulate original text on input</label>
+<input type="checkbox" onchange="unwrapText(this)"><label>Unwrap text</label>
+<input type="checkbox" onchange="addOnInputEvent(this)"><label>Manipulate original text on input</label>
+<input type="checkbox" id="copyManipulated"><label>Copy manipulated text to clipboard</label>
 <br>
 <label>Background color:</label> <input type="color" id="color" value="#d3d3d3" oninput="setColor()">
 <hr>
