--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@ JS Text Manipulator 1.4.7
 <input type="button" value="Convert from Base64" onclick="base64ToFile()">
 <input type="button" value="Convert to Base64" onclick="fileToBase64()">
 <hr>
-<input type="button" value="Clear text areas" onclick="clearText(this.value);">
+<input type="button" value="Clear text areas" onclick="clearText(this.value)">
 <input type="button" value="Clear original text area" onclick="clearText(this.value)">
 <input type="button" value="Clear manipulated text area" onclick="clearText(this.value)">
 <input type="button" value="Clear methods list" onclick="clearText(this.value)">
