--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>JS Text Manipulator 1.4.7</title>
+<title>JS Text Manipulator</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.1.1/math.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/voca/1.4.0/voca.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fast-xml-parser/4.0.2/fxparser.min.js"></script>
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-JS Text Manipulator 1.4.7
+JS Text Manipulator
 <hr>
 <textarea id="original" rows="20" cols="70" placeholder="Enter original text here ..."></textarea>
 <textarea id="manipulated" rows="20" cols="70" placeholder="Manipulated text will appear here ..."></textarea>
