--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>JS Text Manipulator v1.5.0</title>
+<title>JS Text Manipulator v1.5.1</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.1/math.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/voca/1.4.0/voca.min.js"></script>
@@ -11,7 +11,7 @@
 <script src="script.js"></script>
 </head>
 <body>
-<div class="title">JS Text Manipulator v1.5.0</div>
+<div class="title">JS Text Manipulator v1.5.1</div>
 <br>
 <div class="textareas">
 <div>
@@ -71,6 +71,7 @@
 <option value="Convert XML to JSON">Convert XML to JSON</option>
 <option value="Convert from Base64">Convert from Base64</option>
 <option value="Convert to Base64">Convert to Base64</option>
+<option value="Convert from code points">Convert from code points</option>
 <option value="Convert to code points">Convert to code points</option>
 <option value="Encode as URI">Encode as URI</option>
 <option value="Decode as URI">Decode as URI</option>
