--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>JS Text Manipulator v1.5.1</title>
+<title>JS Text Manipulator v1.5.2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.5.0/math.min.js"></script>
@@ -13,7 +13,7 @@
 <script src="script.js"></script>
 </head>
 <body>
-<div class="title">JS Text Manipulator v1.5.1</div>
+<div class="title">JS Text Manipulator v1.5.2</div>
 <br>
 <div class="textareas">
 <div>
@@ -70,6 +70,7 @@
 <option value="Convert to upper case">Convert to upper case</option>
 <option value="Convert to single line">Convert to single line</option>
 <option value="Convert to list">Convert to list</option>
+<option value="Convert query string to JSON">Convert query string to JSON</option>
 <option value="Convert XML to JSON">Convert XML to JSON</option>
 <option value="Convert from Base64">Convert from Base64</option>
 <option value="Convert to Base64">Convert to Base64</option>
